# rde-client-proxyserver

./: Dockerfile  README.md  entrypoint.sh  pyproject.toml
proxyserver/: app.py
proxyserver/templates/: index.html
